# cse121

./: .gitignore
lab1/lab1_2/: CMakeLists.txt
lab1/lab1_2/main/: main.c
lab1/lab1_3/: CMakeLists.txt
lab1/lab1_3/main/: CMakeLists.txt  main.c
lab2/lab2_1/: CMakeLists.txt  gdbinit  sdkconfig
lab2/lab2_1/main/: lab2_1.c
lab2/lab2_2/: README.md
lab2/lab2_2/main/: lab2_2.c
lab3/lab3_2/main/: lab3_2.cpp
lab3/lab3_3/main/: CMakeLists.txt  DFRobot_LCD.cpp  DFRobot_LCD.h  lab3_3.cpp  temp.c
lab4/lab4_1/main/: lab4_1.c
lab4/lab4_2/: sdkconfig
lab4/lab4_2/main/: lab4_2.c
lab4/lab4_3/: CMakeLists.txt
lab4/lab4_3/main/: lab4_3.c
lab5/lab5_1/: lab5_1
lab5/lab5_2/main/: lab5_2.c
lab5/lab5_3/: sdkconfig
lab5/lab5_3/main/: lab5_3.c
lab6/lab6_1/main/: CMakeLists.txt  lab6_1.c  temp.c
lab7/: server.py
lab7/lab7_1/: CMakeLists.txt  sdkconfig
lab7/lab7_1/main/: CMakeLists.txt  lab7_1.c
lab7/lab7_2/: sdkconfig
lab7/lab7_2/main/: CMakeLists.txt  lab7_2.c  temp.c
lab7/lab7_3/: CMakeLists.txt
lab7/lab7_3/main/: CMakeLists.txt  get_http.c  get_https.c  lab7_3.c  post.c  temp.c
lab8/lab1-2-rust/: Cargo.toml
lab8/lab1-2-rust/src/: main.rs
lab8/lab1-3-rust/: Cargo.toml
lab8/lab1-3-rust/src/: main.rs
